feat: Criando um Pipe Puro

--- a/src/app/exemplos-pipes/exemplos-pipes.component.html
+++ b/src/app/exemplos-pipes/exemplos-pipes.component.html
@@ -15,3 +15,16 @@
 
 <!-- transformando o objeto para um visualização em json -->
 <P>Livro: {{ livro | json }}</P>
+
+<input type="text" [(ngModel)]="filtro" />
+
+<br />
+
+<input type="text" #novoValor />
+
+<!-- Aqui é onde o uso do pipe puro vem a tona, como ele é puro, ao adicionar um elemento e fazer a pesquisa do mesmo, ele não retorna do novo valor inserido, pois ele não olha para essas modificações do value -->
+<button (click)="addCurso(novoValor.value)">Add curso</button>
+
+<ul>
+  <li *ngFor="let curso of cursos | filtroArray : filtro">{{ curso }}</li>
+</ul>
